Added qna section, edited css and cleaned up file

--- a/index.html
+++ b/index.html
@@ -42,25 +42,21 @@
             </div>
          </image_col>
       </section>
-<!-- 
-      <section>
-               <ul>
-                  Contact:
-                  <li>Louis Ash-Kaufman - louis.ash-kaufman@seattlecolleges.edu // @lashkscc</li>
-                     <li>Kaulu Kahapea-Aquino - kauluka@gmail.com // @kauluka </li>
-                        <li>Miguel Quintana miqo1385@gmail.com   @miqo1385</li>
-                           <li>Aurora : filgigin@gmail.com //@ aurorhaw</li>                                 
-                              <li>Faris: fabsheru77@gmail.com // @fabsheru77</li>
-               </ul>             
 
-               <ol>
-                  Refrences or sources
-                  <li>Name</li>
-                  <li>xxxx</li>
-                  <li>xxxxx</li>
-                  <li>xxxxx</li>
-               </ol>
-      </section>  -->
+      <section id=style_qna>
+         <article>
+            <h2>Does this sample question look right</h2>
+            <p id=style_answer>
+               Phasellus ornare condimentum dolor, consequat imperdiet velit consequat in. Etiam a rutrum dui. Phasellus vehicula ligula nec vestibulum sagittis. Integer id sem turpis. Integer neque mi, sodales in lacinia vel, tristique et urna. Vestibulum eleifend sodales tortor eu laoreet. Mauris fermentum vitae sem nec semper. Integer tempus ante ac ipsum vestibulum, ullamcorper sagittis felis pharetra. Proin eu ullamcorper est. 
+            </p>
+         </article>
+         <article>
+            <h2>Sample question 2</h2>
+            <p id=style_answer>
+               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper quam vel neque euismod egestas. Fusce non arcu sed ante porttitor bibendum ac et ex. Cras eu risus libero. Maecenas posuere at turpis at placerat. Sed luctus ante nec ipsum commodo condimentum. Donec ultrices tincidunt diam, id congue turpis. 
+            </p>
+         </article>
+      </section>
 
       <section id=style_references>
          <ol>
