Tested adding question format

--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
 
       <section id=style_qna>
          <article>
-            <h2>Does this sample question look right</h2>
+            <h2>Why did Daylight Saving Time start?</h2>
             <p id=style_answer>
-               Phasellus ornare condimentum dolor, consequat imperdiet velit consequat in. Etiam a rutrum dui. Phasellus vehicula ligula nec vestibulum sagittis. Integer id sem turpis. Integer neque mi, sodales in lacinia vel, tristique et urna. Vestibulum eleifend sodales tortor eu laoreet. Mauris fermentum vitae sem nec semper. Integer tempus ante ac ipsum vestibulum, ullamcorper sagittis felis pharetra. Proin eu ullamcorper est. 
+               The first legislation concerning Daylight Saving Time was the Standard Time Act of 1918, establishing the 5 time zones: Eastern, Central, Mountain, Pacific, and Atlantic (to include Alaska). It established DST to begin on the last Sunday of October and end on the last Sunday of March. This adoption of DST was prompted by its adoption in Europe during WWI, with the idea that a later would conserve energy and resources.Congress abolished it at the end of the war, but the practice could be recognized at the state level. Congress federally implemented a year-round DST during WWII. 
+
             </p>
          </article>
          <article>
