Inserted content, adjusted layout, css.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
                </head>
 <body>
       <header>
-         <div id="title">Document Github Webpage - Daylight Saving Time </div>
+         <div id="title">Get to Know Permanent Daylight Saving Time</div>
       </header>
     
       <section id=style_subheader>
-        An argument for daylight savings ALWAYS. (Summary)<a href= "https://github.com/lashkscc/IT115-A4-Group2"target="blank">CLICK-LINK</a>
+      <strong>Add hours of potential to your day</strong>
       </section> 
       <!-- <section>
          <a href= "https://pages.github.com/"target="blank">CLICK-LINK</a>
@@ -24,11 +24,69 @@
       <section id=style_imageText>
          <text_col>
             <article>
-               <h2>Title for section</h2>
-               <p>Lorem ipsum dolor sit amet, nonumes voluptatum mel ea, cu case ceteros cum. Novum commodo malorum vix ut. Dolores consequuntur in ius, sale electram dissentiunt quo te. Cu duo omnes invidunt, eos eu mucius fabellas. Stet facilis    ius te, quando voluptatibus eos in. Ad vix mundi alterum, integre urbanitas intellegam vix in.  </p>
+               <h2>Overview</h2>
+               <p>Permanent Daylight Saving Time (DST) is the process of staying on summer hours all year. The sun would rise and set one hour later, “adding” hours of sunlight to each day. While highly debatable, this practice is prefered by modern people who prefer to have daylight in the evening.  
+               </p>
+            </article>
+         </text_col>
+
+         <image_col>
+            <div>
+               <img src="PMC.jpg" alt="Picture "></iframe>
+            </div>
+         </image_col>
+      </section>
+
+      <section id=style_qna>
+         <article>
+            <h2>What is Daylight Saving Time?</h2>
+            <p id=style_answer>
+               Daylight Saving Time (DST) is the practice of setting the clock one hour ahead of Standard Time for a portion of the year. Currently in the United States, DST begins on the second Sunday of March at 2 AM, and ends on the first Sunday of November at 2 AM. The purpose of this is to take the daylight from the morning, in order to extend it in the evening. 
+
+            </p>
+         </article>
+         <article>
+            <h2>Why was a Standard Time established in the first place?</h2>
+            <p id=style_answer>
+               The original development of a “standard time” in the United States and Canada was implemented because of the growing railroad system. To help with the confusion between railroad terminals, which had been using the position of the sun in the sky to determine the approximate time, the U.S and Canadian railroads split into 4 time zones in 1883: Eastern, Central, Mountain, and Pacific. Local time zones adopted these railway time zones. 
+            </p>
+         </article>
+         <article>
+            <h2>Why did Daylight Saving Time start?</h2>
+            <p id=style_answer>
+               The first legislation concerning Daylight Saving Time was the Standard Time Act of 1918, establishing the 5 time zones: Eastern, Central, Mountain, Pacific, and Atlantic (to include Alaska). It established DST to begin on the last Sunday of October and end on the last Sunday of March. This adoption of DST was prompted by its adoption in Europe during WWI, with the idea that a later would conserve energy and resources.Congress abolished it at the end of the war, but the practice could be recognized at the state level. Congress federally implemented a year-round DST during WWII. 
+
+            </p>
+         </article>
+         <article>
+            <h2>What is preventing us from having year-round Daylight Saving?</h2>
+            <p id=style_answer>
+               Up until 1966, states (and cities) were free to observe DST in any capacity. This caused a lot of confusion, because no national pattern dictated when/if a state or area observed DST. This prompted Congress to pass the Uniform Time Act of 1966, which mandated a Standard Time within each timezone and a standard observance period of Daylight Saving Time. It allowed for states to elect not to participate, or otherwise adhere to the specific dates and times specified: the first Sunday of October and end the last Sunday of April. 
+
+            </p>
+         </article>
+         <article>
+            <h2>Why not just move to Standard Time?</h2>
+            <p id=style_answer>
+               This is a highly debated point. Arizona and Hawaii follow permanent Standard Time, and others have pending legislation on the matter. However, a significant number of states have passed legislation to adopt permanent Daylight Saving Time, contingent upon the amending of the Uniform Time Act by Congress. Why the disparity? Many people hold the belief that DST can help lower energy costs, but this has little evidence. It is also hard to study, since observing DST during Standard Time is illegal in the U.S. There is more evidence to suggest that it may lower crime rates. For many people it may just be a quality of life preference: they prefer to have their daylight in the evening. 
+
+            </p>
+         </article>
+      </section>
+
+      <section id=style_newContentTitle>
+      What are the effects of Daylight Saving Time?
+      </section>
+      
+      <section id=style_imageText>
+         <text_col>
+            <article>
+               <h2>More sunny, productive hours to spend with loved ones</h2>
+               <p>Permanent Daylight Saving Time (DST) is the process of staying on summer hours all year. The sun would rise and set one hour later, “adding” hours of sunlight to each day. While highly debatable, this practice is prefered by modern people who prefer to have daylight in the evening.  
+               </p>
             </article>
             <article>
-               <h2>Illud mollis moderatius</h2>
+               <h2>Decreased rates of disease and accidents, and higher productivity and wages.</h2>
                <p>Eum facete intellegat ei, ut mazim melius usu. Has elit simul primis ne, regione minimum id cum. Sea deleniti dissentiet ea. Illud mollis moderatius ut per, at qui ubique populo. Eum ad cibo legimus, vim ei quidam fastidii. Ex ignota epicurei quo</p>
             </article>
          </text_col>
@@ -43,21 +101,6 @@
          </image_col>
       </section>
 
-      <section id=style_qna>
-         <article>
-            <h2>Why did Daylight Saving Time start?</h2>
-            <p id=style_answer>
-               The first legislation concerning Daylight Saving Time was the Standard Time Act of 1918, establishing the 5 time zones: Eastern, Central, Mountain, Pacific, and Atlantic (to include Alaska). It established DST to begin on the last Sunday of October and end on the last Sunday of March. This adoption of DST was prompted by its adoption in Europe during WWI, with the idea that a later would conserve energy and resources.Congress abolished it at the end of the war, but the practice could be recognized at the state level. Congress federally implemented a year-round DST during WWII. 
-
-            </p>
-         </article>
-         <article>
-            <h2>Sample question 2</h2>
-            <p id=style_answer>
-               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ullamcorper quam vel neque euismod egestas. Fusce non arcu sed ante porttitor bibendum ac et ex. Cras eu risus libero. Maecenas posuere at turpis at placerat. Sed luctus ante nec ipsum commodo condimentum. Donec ultrices tincidunt diam, id congue turpis. 
-            </p>
-         </article>
-      </section>
 
       <section id=style_references>
          <ol>
