added bulleted list

--- a/index.html
+++ b/index.html
@@ -77,23 +77,35 @@
       <section id=style_newContentTitle>
       What are the effects of Daylight Saving Time?
       </section>
-      
+
       <section id=style_imageText>
          <text_col>
             <article>
                <h2>More sunny, productive hours to spend with loved ones</h2>
-               <p>Permanent Daylight Saving Time (DST) is the process of staying on summer hours all year. The sun would rise and set one hour later, “adding” hours of sunlight to each day. While highly debatable, this practice is prefered by modern people who prefer to have daylight in the evening.  
+               <p>
+                  <ul>
+                     <li>“The added daylight means more exposure to vitamin D and the added time for people to exercise outdoors.”</li>
+                     <li>People could work longer, and when work was done it was still bright enough to run errands and stimulate the economy.</li>
+                   </ul> 
                </p>
             </article>
             <article>
                <h2>Decreased rates of disease and accidents, and higher productivity and wages.</h2>
-               <p>Eum facete intellegat ei, ut mazim melius usu. Has elit simul primis ne, regione minimum id cum. Sea deleniti dissentiet ea. Illud mollis moderatius ut per, at qui ubique populo. Eum ad cibo legimus, vim ei quidam fastidii. Ex ignota epicurei quo</p>
+               <p>
+                  <ul>
+                     <li>“With the transition to and from daylight saving time, all we are doing is adjusting the clock on the wall, but our bodies still have to catch up, and the environmental clock doesn't change…The risk for car accidents and other health problems, such as heart attacks, increases.”</li>
+                     <li>“There are biological clocks in most of our tissues and organs. When these clocks become out of synch with the light-dark cycle and behaviors such as feeding, exercise and sleep, research has shown that this misalignment can impair metabolic, cardiovascular and cognitive functioning.”</li>
+                </ul> 
+               </p>
             </article>
          </text_col>
 
          <image_col>
             <div>
                <img src="PMC.jpg" alt="Picture "></iframe>
+            </div>
+            <div>
+               <img src="Seattle.jpg" alt="Picture "></iframe>
             </div>
             <div>
                <img src="Seattle.jpg" alt="Picture "></iframe>
