--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
          <image_col>
             <div>
-               <img src=webpage%20pictures/385361183_1140x641.jpg alt="Picture "></iframe>
+               <img src=webpage%20pictures/istockphoto-1044312456-170667a.jpeg alt="Picture "></iframe>
             </div>
          </image_col>
       </section>
@@ -102,13 +102,13 @@
 
          <image_col>
             <div>
-               <img src="PMC.jpg" alt="Picture "></iframe>
+               <img src=webpage%20pictures/1m.jpg alt="Picture "></iframe>
             </div>
             <div>
-               <img src="Seattle.jpg" alt="Picture "></iframe>
+               <img src=webpage%20pictures/385361183_1140x641.jpg alt="Picture "></iframe>
             </div>
             <div>
-               <img src="Seattle.jpg" alt="Picture "></iframe>
+               <img src=webpage%20pictures/7m.jpg alt="Picture "></iframe>
             </div>
          </image_col>
       </section>
