Changed link color, added images

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <li><a href="https://www.nbcchicago.com/news/local/how-daylight-saving-time-got-started/2666081/">NBC Chicago: How Daylight Saving Time Got Started</a> </li>
             <li><a href="https://www.treehugger.com/do-we-still-need-daylight-saving-time-4863800">Treehugger: Do We Still Need Daylight Saving Time?</a> </li>
             <li><a href="https://en.wikipedia.org/wiki/Permanent_time_observation_in_the_United_States#cite_note-VGA_2021-59">Vermont General Assembly: H.168</a></li>
-            <li>xxxxx</li>
+            <li><a href="https://unsplash.com">Unsplash :The internet's source of freely-usable images.</a></li>
          </ol>
       </section>
 </body>
